refactor(): improve processing logic